--- a/taoDeliveryRdf/locales/fr-CA/messages.po
+++ b/taoDeliveryRdf/locales/fr-CA/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint104\n"
-"PO-Revision-Date: 2019-06-07T10:04:21\n"
+"Project-Id-Version: TAO 3.3.0-sprint107\n"
+"PO-Revision-Date: 2019-10-11T08:48:32\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-CA\n"
@@ -39,9 +39,6 @@ msgstr "Assigné à "
 
 msgid "Attempt %1$s of %2$s"
 msgstr ""
-
-msgid "Attempts"
-msgstr "Tentatives"
 
 msgid "Attempts %1$s of %2$s"
 msgstr ""
@@ -127,7 +124,7 @@ msgstr "Accès invité"
 msgid "Importing %1$s files into \'%2$s\"
 msgstr ""
 
-msgid "Last updated on %2s"
+msgid "Last updated on:"
 msgstr ""
 
 #, tao-public
@@ -137,9 +134,6 @@ msgstr ""
 #, tao-public
 msgid "Manage tests"
 msgstr ""
-
-msgid "Manifest not found in assembly"
-msgstr "Manifeste non trouvé dans l'assemblée"
 
 #, tao-public
 msgid "Move"
@@ -163,8 +157,8 @@ msgstr "Nouvelle passation"
 msgid "No attempt has been started yet."
 msgstr "Aucune tentative n'a déjà commencé."
 
-msgid "No information available"
-msgstr "Aucune information disponible"
+msgid "No information available about attempts"
+msgstr ""
 
 #, tao-public
 msgid "Prepare, publish deliveries sessions."
@@ -184,7 +178,7 @@ msgstr ""
 msgid "Publish the test"
 msgstr ""
 
-msgid "Published on %2s"
+msgid "Published on:"
 msgstr ""
 
 msgid "Publishing of \"%s"
@@ -235,9 +229,6 @@ msgstr ""
 
 msgid "Unable to load tests"
 msgstr ""
-
-msgid "Unknown error during import"
-msgstr "Erreur inconnue au cours de l'importation"
 
 msgid "unlimited"
 msgstr ""
