--- a/taoDeliveryRdf/locales/lt-LT/messages.po
+++ b/taoDeliveryRdf/locales/lt-LT/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint112\n"
-"PO-Revision-Date: 2019-10-09T09:03:09\n"
+"Project-Id-Version: TAO 3.3.0-sprint107\n"
+"PO-Revision-Date: 2019-10-11T08:48:32\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: lt-LT\n"
@@ -71,8 +71,8 @@ msgstr "Sukurti testą"
 msgid "Delete"
 msgstr "Ištrinti"
 
-msgid "Deleting of \"%s\""
-msgstr "Šalinamas \"%s\""
+msgid "Deleting of \"%s"
+msgstr ""
 
 #, tao-public
 msgid "Deliveries"
@@ -103,8 +103,8 @@ msgstr "Pateiktis išsaugota"
 msgid "Delivery with label \"%s\" not found"
 msgstr "Pateiktis su pavadinimu \"%s\" nerasta"
 
-msgid "Directory %s doesn't exist"
-msgstr "Katalogas %s neegzistuoja"
+msgid "Directory %s doesn\'t exist"
+msgstr ""
 
 msgid "Error"
 msgstr "Klaida"
@@ -121,7 +121,7 @@ msgstr "Eksportuojama %s"
 msgid "Guest access"
 msgstr "Svečio prieiga"
 
-msgid "Importing %1$s files into \'%2$s\'"
+msgid "Importing %1$s files into \'%2$s\"
 msgstr ""
 
 msgid "Last updated on:"
@@ -181,8 +181,8 @@ msgstr "Paskelbti testą"
 msgid "Published on:"
 msgstr ""
 
-msgid "Publishing of \"%s\""
-msgstr "\"%s\" paskelbimas"
+msgid "Publishing of \"%s"
+msgstr ""
 
 msgid "Save"
 msgstr "Išsaugoti"
