--- a/taoDeliveryRdf/locales/nl-NL/messages.po
+++ b/taoDeliveryRdf/locales/nl-NL/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint104\n"
-"PO-Revision-Date: 2019-06-07T10:04:21\n"
+"Project-Id-Version: TAO 3.3.0-sprint107\n"
+"PO-Revision-Date: 2019-10-11T08:48:32\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: nl-NL\n"
@@ -39,9 +39,6 @@ msgstr "Toegewezen aan"
 
 msgid "Attempt %1$s of %2$s"
 msgstr "Poging %1$s van %2$s"
-
-msgid "Attempts"
-msgstr "Pogingen"
 
 msgid "Attempts %1$s of %2$s"
 msgstr "Poging %1$s van %2$s"
@@ -127,7 +124,7 @@ msgstr "Gasttoegang"
 msgid "Importing %1$s files into \'%2$s\"
 msgstr ""
 
-msgid "Last updated on %2s"
+msgid "Last updated on:"
 msgstr ""
 
 #, tao-public
@@ -137,9 +134,6 @@ msgstr ""
 #, tao-public
 msgid "Manage tests"
 msgstr ""
-
-msgid "Manifest not found in assembly"
-msgstr "Manifest is niet gevonden in de samenstelling"
 
 #, tao-public
 msgid "Move"
@@ -163,8 +157,8 @@ msgstr "New pakket"
 msgid "No attempt has been started yet."
 msgstr "Er is nog geen poging gestart."
 
-msgid "No information available"
-msgstr "Geen informatie beschikbaar"
+msgid "No information available about attempts"
+msgstr ""
 
 #, tao-public
 msgid "Prepare, publish deliveries sessions."
@@ -184,8 +178,8 @@ msgstr ""
 msgid "Publish the test"
 msgstr ""
 
-msgid "Published on %2s"
-msgstr "Gepubliceerd op %2s"
+msgid "Published on:"
+msgstr ""
 
 msgid "Publishing of \"%s"
 msgstr ""
@@ -234,9 +228,6 @@ msgid "Unable to import Archive"
 msgstr "Kan archief niet importeren"
 
 msgid "Unable to load tests"
-msgstr ""
-
-msgid "Unknown error during import"
 msgstr ""
 
 msgid "unlimited"
