--- a/taoDeliveryRdf/locales/sv-SE/messages.po
+++ b/taoDeliveryRdf/locales/sv-SE/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint104\n"
-"PO-Revision-Date: 2019-06-07T10:04:21\n"
+"Project-Id-Version: TAO 3.3.0-sprint107\n"
+"PO-Revision-Date: 2019-10-11T08:48:33\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: sv-SE\n"
@@ -38,9 +38,6 @@ msgid "Assigned to"
 msgstr ""
 
 msgid "Attempt %1$s of %2$s"
-msgstr ""
-
-msgid "Attempts"
 msgstr ""
 
 msgid "Attempts %1$s of %2$s"
@@ -127,7 +124,7 @@ msgstr ""
 msgid "Importing %1$s files into \'%2$s\"
 msgstr ""
 
-msgid "Last updated on %2s"
+msgid "Last updated on:"
 msgstr ""
 
 #, tao-public
@@ -136,9 +133,6 @@ msgstr ""
 
 #, tao-public
 msgid "Manage tests"
-msgstr ""
-
-msgid "Manifest not found in assembly"
 msgstr ""
 
 #, tao-public
@@ -163,7 +157,7 @@ msgstr ""
 msgid "No attempt has been started yet."
 msgstr ""
 
-msgid "No information available"
+msgid "No information available about attempts"
 msgstr ""
 
 #, tao-public
@@ -184,7 +178,7 @@ msgstr ""
 msgid "Publish the test"
 msgstr ""
 
-msgid "Published on %2s"
+msgid "Published on:"
 msgstr ""
 
 msgid "Publishing of \"%s"
@@ -234,9 +228,6 @@ msgid "Unable to import Archive"
 msgstr ""
 
 msgid "Unable to load tests"
-msgstr ""
-
-msgid "Unknown error during import"
 msgstr ""
 
 msgid "unlimited"
