added translations of phrases for the Lithuanian language

--- a/taoOutcomeUi/locales/lt-LT/messages.po
+++ b/taoOutcomeUi/locales/lt-LT/messages.po
@@ -126,7 +126,7 @@ msgid "Please confirm deletion"
 msgstr "Prašome patvirtinti ištrynimą"
 
 msgid "Preview"
-msgstr ""
+msgstr "Peržiūra"
 
 msgid "Remove All grades"
 msgstr "Pašalinti Visus pažymius"
