--- a/tao/locales/lt-LT/services.rdf.po
+++ b/tao/locales/lt-LT/services.rdf.po
@@ -43,7 +43,7 @@ msgstr "Web Servisas"
 # http://www.tao.lu/middleware/wfEngine.rdf#ClassDeliveryServices
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Delivery Services"
-msgstr "Pateikties Servisai"
+msgstr "Pateikties Servisas"
 
 # http://www.tao.lu/middleware/wfEngine.rdf#ClassDeliveryServices
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
