--- a/taoDeliveryRdf/locales/lb-LU/messages.po
+++ b/taoDeliveryRdf/locales/lb-LU/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint107\n"
-"PO-Revision-Date: 2019-10-11T08:48:32\n"
+"Project-Id-Version: TAO 3.4.0-sprint115\n"
+"PO-Revision-Date: 2019-11-22T11:22:54\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: lb-LU\n"
@@ -213,6 +213,9 @@ msgid "Tests"
 msgstr ""
 
 msgid "The shared filesystem parameter should be a boolean value 'true' or 'false'."
+msgstr ""
+
+msgid "The test \"%s\" does not contain any items and cannot be published."
 msgstr ""
 
 msgid "There are currently %s attempts"
