--- a/taoAltResultStorage/locales/en-US/taoAltResultStorage.rdf.po
+++ b/taoAltResultStorage/locales/en-US/taoAltResultStorage.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v3.1-dev\n"
-"PO-Revision-Date: 2015-06-18T17:24:01\n"
+"Project-Id-Version: TAO 3.4.0-sprint116\n"
+"PO-Revision-Date: 2019-12-06T15:26:48\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: en-US\n"
