--- a/qtiItemPci/locales/it-IT/messages.po
+++ b/qtiItemPci/locales/it-IT/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint110\n"
-"PO-Revision-Date: 2019-09-13T09:09:21\n"
+"Project-Id-Version: TAO 3.4.0-sprint120\n"
+"PO-Revision-Date: 2020-01-31T09:34:34\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: it-IT\n"
@@ -12,9 +12,6 @@ msgstr ""
 "X-Poedit-Basepath: ../../\n"
 "X-Poedit-KeywordsList: __\n"
 "X-Poedit-SearchPath-0: .\n"
-
-msgid "A newer version of the pci \"%s\" already exists (current version: %s, target version: %s)"
-msgstr ""
 
 msgid "Add gap"
 msgstr "Aggiungi spazio"
@@ -37,10 +34,16 @@ msgstr ""
 msgid "authorize white space"
 msgstr ""
 
+msgid "Auto playback recording"
+msgstr ""
+
 msgid "Auto start recording"
 msgstr ""
 
 msgid "Back to listing"
+msgstr ""
+
+msgid "braces/curly brackets"
 msgstr ""
 
 msgid "Cancel"
@@ -70,6 +73,9 @@ msgstr ""
 msgid "enable auto wrap"
 msgstr ""
 
+msgid "equal"
+msgstr ""
+
 msgid "Experimental only"
 msgstr ""
 
@@ -91,6 +97,9 @@ msgstr "Dimensione dello spazio"
 msgid "Give the possibility to the test taker to playback its own recording."
 msgstr ""
 
+msgid "greater than"
+msgstr ""
+
 msgid "greater than or equal"
 msgstr ""
 
@@ -103,6 +112,9 @@ msgstr ""
 msgid "In seconds. Maximum recording time allowed (cannot be less than 10seconds). Recording will automatically stop once reached."
 msgstr ""
 
+msgid "Indefinite integral"
+msgstr ""
+
 msgid "Large"
 msgstr "Grande"
 
@@ -113,6 +125,9 @@ msgid "ln"
 msgstr ""
 
 msgid "log"
+msgstr ""
+
+msgid "lower than"
 msgstr ""
 
 msgid "lower than or equal"
@@ -133,6 +148,9 @@ msgstr "Medio"
 msgid "Min:"
 msgstr ""
 
+msgid "minus"
+msgstr ""
+
 msgid "Mono"
 msgstr ""
 
@@ -148,11 +166,20 @@ msgstr ""
 msgid "Options"
 msgstr ""
 
+msgid "parentheses/round brackets"
+msgstr ""
+
+msgid "plus"
+msgstr ""
+
 msgid "Plus/minus"
 msgstr ""
 
 #, tao-public
 msgid "Portable Custom Interactions"
+msgstr ""
+
+msgid "Recorded audio is automatically played back after recording stops. During playback, no user interaction is possible and all buttons are disabled."
 msgstr ""
 
 msgid "Recording format"
@@ -180,10 +207,16 @@ msgstr ""
 msgid "Small"
 msgstr "Piccolo"
 
+msgid "square brackets"
+msgstr ""
+
 msgid "square root"
 msgstr ""
 
 msgid "Stereo"
+msgstr ""
+
+msgid "subscript"
 msgstr ""
 
 msgid "Symbols"
@@ -208,6 +241,9 @@ msgid "Time limit:"
 msgstr ""
 
 msgid "times"
+msgstr ""
+
+msgid "times dot"
 msgstr ""
 
 msgid "Trigonometry"
