--- a/qtiItemPci/locales/lt-LT/messages.po
+++ b/qtiItemPci/locales/lt-LT/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint112\n"
-"PO-Revision-Date: 2019-10-09T09:03:08\n"
+"Project-Id-Version: TAO 3.4.0-sprint120\n"
+"PO-Revision-Date: 2020-01-31T09:34:34\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: lt-LT\n"
@@ -12,9 +12,6 @@ msgstr ""
 "X-Poedit-Basepath: ../../\n"
 "X-Poedit-KeywordsList: __\n"
 "X-Poedit-SearchPath-0: .\n"
-
-msgid "A newer version of the pci \"%s\" already exists (current version: %s, target version: %s)"
-msgstr "Jau egzistuoja naujesnė pci klausimo \"%s\" versija (dabartinė versija – %s, nauja versija būtų %s)"
 
 msgid "Add gap"
 msgstr "Pridėti tarpą"
@@ -37,11 +34,17 @@ msgstr "Garso perdavimo greitis:"
 msgid "authorize white space"
 msgstr "lesti palikti tuščią vietą"
 
+msgid "Auto playback recording"
+msgstr ""
+
 msgid "Auto start recording"
 msgstr "Garso įrašą paleisti automatiškai"
 
 msgid "Back to listing"
 msgstr "Grįžti į sąrašą"
+
+msgid "braces/curly brackets"
+msgstr ""
 
 msgid "Cancel"
 msgstr ""
@@ -70,6 +73,9 @@ msgstr "dalinti"
 msgid "enable auto wrap"
 msgstr ""
 
+msgid "equal"
+msgstr ""
+
 msgid "Experimental only"
 msgstr "Tik eksperimentinis"
 
@@ -91,6 +97,9 @@ msgstr "Tarpo dydis"
 msgid "Give the possibility to the test taker to playback its own recording."
 msgstr "Suteikti galimybę testo laikytojui atkurti savo įrašą."
 
+msgid "greater than"
+msgstr ""
+
 msgid "greater than or equal"
 msgstr "daugiau arba lygu"
 
@@ -103,6 +112,9 @@ msgstr "BPS (bitai per sekundę). Nustatyti kompromisą tarp garso kokybės ir f
 msgid "In seconds. Maximum recording time allowed (cannot be less than 10seconds). Recording will automatically stop once reached."
 msgstr "Sekundės. Didžiausias leidžiamas įrašo laikas (negali būti mažesnis už 10 s). Įrašymas automatiškai bus sustabdytas, kai bus pasiekta ši riba. "
 
+msgid "Indefinite integral"
+msgstr ""
+
 msgid "Large"
 msgstr "Didelis"
 
@@ -114,6 +126,9 @@ msgstr "ln"
 
 msgid "log"
 msgstr "log"
+
+msgid "lower than"
+msgstr ""
 
 msgid "lower than or equal"
 msgstr "mažiau negu arba lygu"
@@ -133,6 +148,9 @@ msgstr "Vidutinis"
 msgid "Min:"
 msgstr "Min.:"
 
+msgid "minus"
+msgstr ""
+
 msgid "Mono"
 msgstr "Mono"
 
@@ -148,11 +166,20 @@ msgstr "Operandai"
 msgid "Options"
 msgstr "Parinktys"
 
+msgid "parentheses/round brackets"
+msgstr ""
+
+msgid "plus"
+msgstr ""
+
 msgid "Plus/minus"
 msgstr "Plius/minus"
 
 #, tao-public
 msgid "Portable Custom Interactions"
+msgstr ""
+
+msgid "Recorded audio is automatically played back after recording stops. During playback, no user interaction is possible and all buttons are disabled."
 msgstr ""
 
 msgid "Recording format"
@@ -180,11 +207,17 @@ msgstr "sinusas"
 msgid "Small"
 msgstr "Mažas"
 
+msgid "square brackets"
+msgstr ""
+
 msgid "square root"
 msgstr "kvadratinė šaknis"
 
 msgid "Stereo"
 msgstr "Stereo"
+
+msgid "subscript"
+msgstr ""
 
 msgid "Symbols"
 msgstr "Simboliai"
@@ -209,6 +242,9 @@ msgstr "Laiko limitas:"
 
 msgid "times"
 msgstr "kartai"
+
+msgid "times dot"
+msgstr ""
 
 msgid "Trigonometry"
 msgstr "Trigonometrija"
