--- a/qtiItemPci/locales/nl-NL/messages.po
+++ b/qtiItemPci/locales/nl-NL/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint110\n"
-"PO-Revision-Date: 2019-09-13T09:09:21\n"
+"Project-Id-Version: TAO 3.4.0-sprint120\n"
+"PO-Revision-Date: 2020-01-31T09:34:34\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: nl-NL\n"
@@ -12,9 +12,6 @@ msgstr ""
 "X-Poedit-Basepath: ../../\n"
 "X-Poedit-KeywordsList: __\n"
 "X-Poedit-SearchPath-0: .\n"
-
-msgid "A newer version of the pci \"%s\" already exists (current version: %s, target version: %s)"
-msgstr "Een nieuwere versie van de pci \"%s\" bestaat al (Huidige versie: %s, doelversie: %s)"
 
 msgid "Add gap"
 msgstr ""
@@ -37,11 +34,17 @@ msgstr "Audio-bitrate:"
 msgid "authorize white space"
 msgstr "sta witruimte toe"
 
+msgid "Auto playback recording"
+msgstr ""
+
 msgid "Auto start recording"
 msgstr "Autostart opname"
 
 msgid "Back to listing"
 msgstr "Terig naar lijst"
+
+msgid "braces/curly brackets"
+msgstr ""
 
 msgid "Cancel"
 msgstr ""
@@ -70,6 +73,9 @@ msgstr "delen"
 msgid "enable auto wrap"
 msgstr ""
 
+msgid "equal"
+msgstr ""
+
 msgid "Experimental only"
 msgstr ""
 
@@ -91,6 +97,9 @@ msgstr ""
 msgid "Give the possibility to the test taker to playback its own recording."
 msgstr "Geef de mogelijkheid aan de kandidaat om zijn eigen afname af te spelen."
 
+msgid "greater than"
+msgstr ""
+
 msgid "greater than or equal"
 msgstr "Groter dan of gelijk aan"
 
@@ -103,6 +112,9 @@ msgstr ""
 msgid "In seconds. Maximum recording time allowed (cannot be less than 10seconds). Recording will automatically stop once reached."
 msgstr "In seconden. Maximum toegestane opname tijd (kan niet korter zijn dan 10 seconden). De opname zal automatisch stoppen wanneer de tijd wordt bereikt."
 
+msgid "Indefinite integral"
+msgstr ""
+
 msgid "Large"
 msgstr ""
 
@@ -114,6 +126,9 @@ msgstr "In"
 
 msgid "log"
 msgstr "log"
+
+msgid "lower than"
+msgstr ""
 
 msgid "lower than or equal"
 msgstr "kleiner dan of gelijk aan"
@@ -133,6 +148,9 @@ msgstr ""
 msgid "Min:"
 msgstr ""
 
+msgid "minus"
+msgstr ""
+
 msgid "Mono"
 msgstr ""
 
@@ -148,11 +166,20 @@ msgstr "operanden"
 msgid "Options"
 msgstr ""
 
+msgid "parentheses/round brackets"
+msgstr ""
+
+msgid "plus"
+msgstr ""
+
 msgid "Plus/minus"
 msgstr "Plus/min"
 
 #, tao-public
 msgid "Portable Custom Interactions"
+msgstr ""
+
+msgid "Recorded audio is automatically played back after recording stops. During playback, no user interaction is possible and all buttons are disabled."
 msgstr ""
 
 msgid "Recording format"
@@ -180,10 +207,16 @@ msgstr "sinus"
 msgid "Small"
 msgstr ""
 
+msgid "square brackets"
+msgstr ""
+
 msgid "square root"
 msgstr "wortel"
 
 msgid "Stereo"
+msgstr ""
+
+msgid "subscript"
 msgstr ""
 
 msgid "Symbols"
@@ -209,6 +242,9 @@ msgstr "Tijdslimiet:"
 
 msgid "times"
 msgstr "keer"
+
+msgid "times dot"
+msgstr ""
 
 msgid "Trigonometry"
 msgstr "Trigonometrie"
