fix: changed translations on preprod after a test is complete. Sentence 'Jūs jau priėmėte šį testą.' changed to 'Jūs jau atlikote šį testą.'

--- a/ltiDeliveryProvider/locales/lt-LT/messages.po
+++ b/ltiDeliveryProvider/locales/lt-LT/messages.po
@@ -127,7 +127,7 @@ msgid "Wrong value of \"secure\" variable."
 msgstr "Neteisinga \"secure\" kintamojo reikšmė."
 
 msgid "You have already taken this test."
-msgstr "Jūs jau priėmėte šį testą."
+msgstr "Jūs jau atlikote šį testą."
 
 msgid "You have finished the test!"
 msgstr "Jūs atlikote šį testą!"
