--- a/taoProctoring/locales/es-MX/messages.po
+++ b/taoProctoring/locales/es-MX/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint120\n"
-"PO-Revision-Date: 2020-01-31T12:41:58\n"
+"Project-Id-Version: TAO 3.4.0-sprint122\n"
+"PO-Revision-Date: 2020-02-28T12:48:14\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: es-MX\n"
@@ -158,10 +158,10 @@ msgstr "autor"
 msgid "Authorize"
 msgstr "Autorizar"
 
-msgid "Authorize Session"
+msgid "Authorize session"
 msgstr "Autorizar sesión"
 
-msgid "Authorize session"
+msgid "Authorize Session"
 msgstr "Autorizar sesión"
 
 msgid "Authorize sessions"
@@ -224,11 +224,11 @@ msgstr "Cancelar"
 msgid "cancel the action"
 msgstr "cancelar la acción"
 
-msgid "Canceled"
-msgstr "Cancelado"
-
 msgid "canceled"
 msgstr "cancelado"
+
+msgid "Canceled"
+msgstr "Cancelado"
 
 msgid "Cannot authorize test session."
 msgstr "No se puede autorizar la sesión de prueba."
@@ -287,11 +287,11 @@ msgstr "comentario"
 msgid "Complaint"
 msgstr "Queja"
 
-msgid "completed"
-msgstr "completado"
-
 msgid "Completed"
 msgstr "Completado"
+
+msgid "completed"
+msgstr "completado"
 
 msgid "Completed tests"
 msgstr "Pruebas completadas"
@@ -320,11 +320,11 @@ msgstr "Actividad de evaluación actual"
 msgid "Current sessions"
 msgstr "Sesiones actuales"
 
-msgid "date"
-msgstr "fecha"
-
 msgid "Date"
 msgstr "Fecha"
+
+msgid "date"
+msgstr "fecha"
 
 msgid "Days"
 msgstr "Días"
@@ -583,11 +583,11 @@ msgstr "Pausar sesión"
 msgid "Pause sessions"
 msgstr "Pausar sesiones"
 
-msgid "Paused"
-msgstr "Pausado"
-
 msgid "paused"
 msgstr "pausado"
+
+msgid "Paused"
+msgstr "Pausado"
 
 msgid "Please select one or more test site to manage proctors"
 msgstr "Seleccione uno o más emplazamientos de prueba para gestionar supervisores"
@@ -649,10 +649,10 @@ msgstr "Supervisores revocados"
 msgid "Progress"
 msgstr "Progreso"
 
-msgid "Reactivate Session"
+msgid "Reactivate session"
 msgstr "Reactivar sesión"
 
-msgid "Reactivate session"
+msgid "Reactivate Session"
 msgstr "Reactivar sesión"
 
 msgid "Refresh"
@@ -694,12 +694,12 @@ msgstr "reportado para irregularidad"
 msgid "Resource update task is completed"
 msgstr "Tarea de actualización de recurso finalizada"
 
-msgid "results"
-msgstr "resultados"
-
 #, tao-public
 msgid "Results"
 msgstr "Resultados"
+
+msgid "results"
+msgstr "resultados"
 
 msgid "Return to the session manager"
 msgstr "Regresar al gestor de sesiones"
@@ -728,6 +728,9 @@ msgstr "sección"
 msgid "Session"
 msgstr "Sesión"
 
+msgid "session"
+msgstr "sesión"
+
 msgid "Session %s - %s has not been processed"
 msgstr "La sesión %s - %s no se procesó"
 
@@ -736,6 +739,9 @@ msgstr "Historial de sesiones"
 
 msgid "Session time handling"
 msgstr "Gestión del tiempo de sesión"
+
+msgid "sessions"
+msgstr "sesiones"
 
 msgid "Sessions"
 msgstr "Sesiones"
@@ -803,11 +809,11 @@ msgstr "Iniciado el"
 msgid "Status"
 msgstr "Estado"
 
-msgid "subcategory"
-msgstr "subcategoría"
-
 msgid "Subcategory"
 msgstr "Subcategoría"
+
+msgid "subcategory"
+msgstr "subcategoría"
 
 msgid "System generated pause."
 msgstr "Pausa generada por el sistema."
@@ -832,6 +838,9 @@ msgstr "Terminar sesión"
 
 msgid "Terminate sessions"
 msgstr "Terminar sesiones"
+
+msgid "Terminate/Reactivate"
+msgstr ""
 
 msgid "Terminate/Reactivate and irregularity"
 msgstr "Terminar/Reactivar e irregularidad"
@@ -1005,8 +1014,3 @@ msgstr "Advertencia: Está a punto de pausar todas las pruebas en curso. Todos l
 msgid "Weather"
 msgstr "Condiciones meteorológicas"
 
-msgid "session"
-msgstr "sesión"
-
-msgid "sessions"
-msgstr "sesiones"
