--- a/taoDelivery/locales/en-US/messages.po
+++ b/taoDelivery/locales/en-US/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint105\n"
-"PO-Revision-Date: 2019-07-05T08:37:15\n"
+"Project-Id-Version: TAO 3.4.0-sprint123\n"
+"PO-Revision-Date: 2020-02-28T14:05:40\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: en-US\n"
@@ -17,6 +17,9 @@ msgid "Access deliveries as a guest"
 msgstr ""
 
 msgid "All rights reserved."
+msgstr ""
+
+msgid "An error occurred!"
 msgstr ""
 
 msgid "Available"
