--- a/taoDelivery/locales/es-MX/messages.po
+++ b/taoDelivery/locales/es-MX/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint105\n"
-"PO-Revision-Date: 2019-07-01T12:42:40\n"
+"Project-Id-Version: TAO 3.4.0-sprint123\n"
+"PO-Revision-Date: 2020-02-28T14:05:41\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: es-MX\n"
@@ -18,6 +18,9 @@ msgstr ""
 
 msgid "All rights reserved."
 msgstr "Todos los derechos reservados."
+
+msgid "An error occurred!"
+msgstr ""
 
 msgid "Available"
 msgstr "Disponible"
@@ -78,3 +81,4 @@ msgstr "Esta prueba debe tomarse en modo de pantalla completa"
 
 msgid "You are no longer allowed to take this test"
 msgstr "Ya no tiene permiso para tomar esta prueba"
+
